[package]
name = "file_converter"
version = "0.1.0"
authors = ["Can Wang canwhut@gmail.com"]
edition = "2021"
description = "convert configuration file between file types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
serde_json = "1.0.68"
clap = { version = "3.1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_ini = "0.2"